--- a/powermenu/powermenu.cabal
+++ b/powermenu/powermenu.cabal
@@ -38,7 +38,7 @@ library
     , vty
   default-language: Haskell2010
 
-executable powermenu-exe
+executable powermenu
   main-is: Main.hs
   other-modules:
       Paths_powermenu
